[project]
name = "pybtm"
version = "1.0.0"
description = ""
authors = [
    {name = "FooQoo"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "janome",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
